--- a/GodOfWar_Axe/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GodOfWar_Axe/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=451,Y=590)
+NewWindowPosition=(X=-267,Y=114)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -123,7 +123,8 @@ LastExecutedLaunchName=DESKTOP-U7Q7FAF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=451,Y=590)
+MultipleInstancePositions=(X=-267,Y=114)
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -158,6 +159,7 @@ MRUItem0=/Game/Maps/Map
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [EditorStartup]
 LastLevel=/Game/Maps/Map
@@ -1184,6 +1186,7 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Animations/ABP_Character.ABP_Character
+OpenAssetsAtExit=/Game/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1198,7 +1201,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2319,7 +2322,7 @@ StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
 StaticMeshComponent.Materials=True
-BP_PlayerCharacter_C.StaticMesh=True
+BP_PlayerCharacter_C.StaticMesh=False
 K2Node_CallFunction.Graph=True
 EditorNotifyObject.Trigger Settings=True
 EditorNotifyObject.Category=True
@@ -2328,23 +2331,41 @@ EditorNotifyObject.AnimNotify=True
 K2Node_InputDebugKey.Input=True
 K2Node_InputDebugKey.Modifier=True
 K2Node_InputAction.Input=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+BP_PlayerCharacter_C.Animation montages=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Animations/AM_Character_DisarmAxe
-MRUItem1=/Game/Blueprints/BP_PlayerCharacter
+MRUItem0=/Game/Blueprints/BP_PlayerCharacter
+MRUItem1=/Game/Animations/AM_Character_DisarmAxe
 MRUItem2=/Game/Animations/AM_Character_ArmAxe
-MRUItem3=/Game/Animations/ABP_Character
-MRUItem4=/Game/Meshes/SKEL_Character
-MRUItem5=/Game/Materials/M_Axe_Leather
-MRUItem6=/Game/Materials/M_Axe_Handle
-MRUItem7=/Game/Materials/M_Axe_Blade
-MRUItem8=/Game/Meshes/SM_Axe
-MRUItem9=/Game/Materials/M_Axe_Bands
-MRUItem10=/Game/Textures/T_Axe_Handle_R1
-MRUItem11=/Game/Textures/T_Axe_Handle_R
-MRUItem12=/Game/Textures/T_Axe_Leather_R
-MRUItem13=/Game/Materials/M_Character_Head
-MRUItem14=/Game/Materials/M_Character_Body
+MRUItem3=/Game/Materials/M_Character_Head
+MRUItem4=/Game/Materials/M_Character_Body
+MRUItem5=/Game/Animations/ABP_Character
+MRUItem6=/Game/Meshes/SKEL_Character
+MRUItem7=/Game/Materials/M_Axe_Leather
+MRUItem8=/Game/Materials/M_Axe_Handle
+MRUItem9=/Game/Materials/M_Axe_Blade
+MRUItem10=/Game/Meshes/SM_Axe
+MRUItem11=/Game/Materials/M_Axe_Bands
+MRUItem12=/Game/Textures/T_Axe_Handle_R1
+MRUItem13=/Game/Textures/T_Axe_Handle_R
+MRUItem14=/Game/Textures/T_Axe_Leather_R
 MRUItem15=/Game/Textures/T_Head_E
 MRUItem16=/Game/Meshes/SK_Character
 MRUItem17=/Game/Animations/AS_Character_DisarmAxe
@@ -2361,10 +2382,11 @@ FbxImportUI.Animation=True
 PropertyWrapper.Variable=False
 BP_PlayerCharacter_C.Character Movement (General Settings)=False
 EditorNotifyObject.AnimLink=True
+BP_PlayerCharacter_C.Animation=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object\" \"Object.SkeletalMeshes\" "
+Object="\"Object\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
@@ -2372,7 +2394,7 @@ PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 FbxImportUI="\"Object\" "
 AnimStateTransitionNode="\"Object\" \"Object.Events.TransitionInterrupt\" "
-AnimStateNodeBase="\"Object\" "
+AnimStateNodeBase="\"Object\" \"Object.Events.TransitionInterrupt\" "
 EdGraphNode="\"Object\" "
 AnimGraphNode_LayeredBoneBlend="\"Object\" \"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object\" \"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
@@ -2539,6 +2561,11 @@ EditorNotifyObject="\"Object\" \"Object.Event.Event\" "
 EditorAnimBaseObj="\"Object\" \"Object.Event.Event\" "
 K2Node_InputDebugKey="\"Object\" "
 K2Node_InputAction="\"Object\" "
+AnimGraphNode_Slot="\"Object\" "
+MaterialExpressionMaterialFunctionCall="\"Object\" "
+MaterialExpressionConstant="\"Object\" "
+MaterialExpressionConstant3Vector="\"Object\" \"Object.Constant\" "
+K2Node_InputKey="\"Object\" "
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2842,7 +2869,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [MaterialEditor]
 PrimType=1
@@ -3187,21 +3214,23 @@ BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupN
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 AnimGraphNode_BlendSpaceGraph=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 K2Node_VariableGet=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
-ABP_Character_C=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
-PropertyWrapper=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
-K2Node_VariableSet=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
-Character=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
+ABP_Character_C=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
+PropertyWrapper=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
+K2Node_VariableSet=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
+Character=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
 AnimGraphNode_TransitionResult=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 PlayerCharacter=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 BP_PlayerCharacter_C=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
-CameraComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
+CameraComponent=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
 CapsuleComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
 SceneComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens
 EdGraph=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 AnimGraphNode_BlendSpacePlayer=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 AnimStateTransitionNode=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
-SkeletalMeshComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
+SkeletalMeshComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,
 StaticMeshComponent=BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
+K2Node_InputAction=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
+K2Node_Tunnel=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.GroupName,AnimGraphNode_BlendSpaceGraph.Blend Space.None,BP_PlayerCharacter_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.PostProcess.Lens,
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
