--- a/GodOfWar_Axe/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GodOfWar_Axe/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,7 +166,7 @@ bShowGrid=False
 LastLevel=/Game/Maps/Map
 
 [ModuleFileTracking]
-GodOfWar_Axe.TimeStamp=2023.02.05-15.54.19
+GodOfWar_Axe.TimeStamp=2023.02.06-18.33.08
 GodOfWar_Axe.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2022.11.29-11.07.18
 StorageServerClient.LastCompileMethod=Unknown
@@ -1186,6 +1186,7 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Blueprints/BP_CameraShake.BP_CameraShake
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
 
 [ContentBrowser]
@@ -1201,7 +1202,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/GodOfWar_Axe
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1886,14 +1887,14 @@ WmfMediaSettings.Debug=True
 BP_PlayerCharacter_C.TransformCommon=False
 BP_PlayerCharacter_C.Animation=False
 BP_PlayerCharacter_C.Mesh=False
-BP_PlayerCharacter_C.Tick=True
-BP_PlayerCharacter_C.ComponentTick=True
-BP_PlayerCharacter_C.Clothing=True
-BP_PlayerCharacter_C.LeaderPoseComponent=True
-BP_PlayerCharacter_C.Physics=True
+BP_PlayerCharacter_C.Tick=False
+BP_PlayerCharacter_C.ComponentTick=False
+BP_PlayerCharacter_C.Clothing=False
+BP_PlayerCharacter_C.LeaderPoseComponent=False
+BP_PlayerCharacter_C.Physics=False
 BP_PlayerCharacter_C.Collision=False
 BP_PlayerCharacter_C.Lighting=False
-BP_PlayerCharacter_C.AnimationRig=True
+BP_PlayerCharacter_C.AnimationRig=False
 BP_PlayerCharacter_C.Deformer=False
 BP_PlayerCharacter_C.SkinWeights=False
 BP_PlayerCharacter_C.HLOD=False
@@ -1928,7 +1929,7 @@ BP_PlayerCharacter_C.PlanarMovement=True
 BP_PlayerCharacter_C.MovementComponent=True
 BP_PlayerCharacter_C.Shape=False
 BP_PlayerCharacter_C.Character=True
-BP_PlayerCharacter_C.Camera=True
+BP_PlayerCharacter_C.Camera=False
 BP_PlayerCharacter_C.Pawn=True
 BP_PlayerCharacter_C.Actor=True
 BP_PlayerCharacter_C.Input=True
@@ -2062,16 +2063,16 @@ Texture2D.File Path=True
 Texture2D.Compositing=True
 SkeletalMeshComponent.Materials=False
 BP_PlayerCharacter_C.Materials=True
-BP_PlayerCharacter_C.Gamepad=True
+BP_PlayerCharacter_C.Gamepad=False
 BP_PlayerCharacter_C.SkeletalMesh=True
 BP_PlayerCharacter_C.Optimization=True
 BP_PlayerCharacter_C.LOD=False
 BP_PlayerCharacter_C.MaterialParameters=False
 BP_PlayerCharacter_C.TextureStreaming=False
 BP_PlayerCharacter_C.DataLayers=True
-BP_PlayerCharacter_C.PostProcess=True
-BP_PlayerCharacter_C.CameraOptions=True
-BP_PlayerCharacter_C.CameraSettings=True
+BP_PlayerCharacter_C.PostProcess=False
+BP_PlayerCharacter_C.CameraOptions=False
+BP_PlayerCharacter_C.CameraSettings=False
 BP_PlayerCharacter_C.CameraCollision=False
 BP_PlayerCharacter_C.Lag=False
 SpringArmComponent.Variable=True
@@ -2306,7 +2307,7 @@ MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
 Texture2D.Interchange=True
 SkeletalMeshSocket.Socket Parameters=True
-BP_PlayerCharacter_C.Player Status=True
+BP_PlayerCharacter_C.Player Status=False
 StaticMeshComponent.Variable=True
 StaticMeshComponent.TransformCommon=True
 StaticMeshComponent.Sockets=True
@@ -2350,8 +2351,8 @@ K2Node_Composite.Outputs=True
 K2Node_Tunnel.Graph=True
 K2Node_Tunnel.Inputs=True
 K2Node_Tunnel.Outputs=True
-BP_PlayerCharacter_C.Animation montages=False
-BP_PlayerCharacter_C.Point options=True
+BP_PlayerCharacter_C.Animation montages=True
+BP_PlayerCharacter_C.Point options=False
 BP_GameMode_C.TransformCommon=True
 BP_GameMode_C.Networking=True
 PlayerState.Replication=True
@@ -2486,7 +2487,7 @@ SphereComponent.TransformCommon=True
 SphereComponent.Variable=True
 BP_Axe_C.Shape=False
 BP_Axe_C.Axe=True
-BP_PlayerCharacter_C.Editor options=True
+BP_PlayerCharacter_C.Editor options=False
 SplineComponent.Events=True
 SplineComponent.Cooking=True
 SplineComponent.Activation=True
@@ -2537,32 +2538,35 @@ SpringArmComponent.Physics=True
 SpringArmComponent.Collision=True
 CameraComponent.Physics=True
 CameraComponent.Collision=True
-BP_PlayerCharacter_C.Camera Pitch Limit=True
+BP_PlayerCharacter_C.Camera Pitch Limit=False
 MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
 MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+BP_CameraShake_C.CameraShake=True
+BP_CameraShake_C.CameraShakePattern=True
+BP_PlayerCharacter_C.Camera Shake Animation=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_PlayerCharacter
-MRUItem1=/Game/Animations/ABP_Character
-MRUItem2=/Game/Animations/AS_Character_RecoverAxe
-MRUItem3=/Game/Blueprints/BP_Axe
-MRUItem4=/Game/Animations/AS_Character_Point
-MRUItem5=/Game/Animations/AS_Character_Idle_Unarmed_LookDown
-MRUItem6=/Game/Animations/AS_Character_Idle_Unarmed_LookUp
-MRUItem7=/Game/Animations/AO_Character
-MRUItem8=/Game/Meshes/SKEL_Character
-MRUItem9=/Game/Animations/AS_Character_Idle_Unarmed
-MRUItem10=/Game/Animations/AS_Character_Idle_Armed
-MRUItem11=/Game/Animations/AM_Character_ThrowAxe
-MRUItem12=/Game/Animations/AM_Character_DisarmAxe
-MRUItem13=/Game/Animations/AM_Character_ArmAxe
-MRUItem14=/Game/Materials/M_Character_Head
-MRUItem15=/Game/Materials/M_Character_Body
-MRUItem16=/Game/Materials/M_Axe_Leather
-MRUItem17=/Game/Materials/M_Axe_Handle
-MRUItem18=/Game/Materials/M_Axe_Blade
-MRUItem19=/Game/Meshes/SM_Axe
+MRUItem0=/Game/Blueprints/BP_CameraShake
+MRUItem1=/Game/Blueprints/BP_PlayerCharacter
+MRUItem2=/Game/Animations/ABP_Character
+MRUItem3=/Game/Animations/AS_Character_RecoverAxe
+MRUItem4=/Game/Blueprints/BP_Axe
+MRUItem5=/Game/Animations/AS_Character_Point
+MRUItem6=/Game/Animations/AS_Character_Idle_Unarmed_LookDown
+MRUItem7=/Game/Animations/AS_Character_Idle_Unarmed_LookUp
+MRUItem8=/Game/Animations/AO_Character
+MRUItem9=/Game/Meshes/SKEL_Character
+MRUItem10=/Game/Animations/AS_Character_Idle_Unarmed
+MRUItem11=/Game/Animations/AS_Character_Idle_Armed
+MRUItem12=/Game/Animations/AM_Character_ThrowAxe
+MRUItem13=/Game/Animations/AM_Character_DisarmAxe
+MRUItem14=/Game/Animations/AM_Character_ArmAxe
+MRUItem15=/Game/Materials/M_Character_Head
+MRUItem16=/Game/Materials/M_Character_Body
+MRUItem17=/Game/Materials/M_Axe_Leather
+MRUItem18=/Game/Materials/M_Axe_Handle
+MRUItem19=/Game/Materials/M_Axe_Blade
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -2592,7 +2596,7 @@ SphereComponent.Collision=False
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object\" \"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object\" \"Object.CameraShakePattern.RootShakePattern\" \"Object.CameraShakePattern.RootShakePattern.Object.Rotation\" \"Object.CameraShakePattern.RootShakePattern.Object.Rotation.Roll\" "
 CrashReportsPrivacySettings="\"Object\" \"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object\" \"Object.Options.bSendUsageData\" "
 InputSettings="\"Object\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
@@ -2639,8 +2643,8 @@ SkinnedAsset="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
 CameraComponent="\"Object\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 BoneProxy="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
@@ -2755,7 +2759,7 @@ SkeletalMeshSocket="\"Object\" "
 SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PersonaPreviewSceneAnimationController="\"Object\" "
 PersonaPreviewSceneController="\"Object\" "
@@ -2835,6 +2839,8 @@ StaticMeshActor=
 AimOffsetBlendSpace="\"Object\" "
 AimOffsetBlendSpace1D="\"Object\" "
 BlendSpace1D="\"Object\" "
+BP_CameraShake_C="\"Object\" \"Object.CameraShakePattern.RootShakePattern\" \"Object.CameraShakePattern.RootShakePattern.Object.Rotation\" \"Object.CameraShakePattern.RootShakePattern.Object.Rotation.Roll\" "
+CameraShakeBase="\"Object\" \"Object.CameraShakePattern.RootShakePattern\" \"Object.CameraShakePattern.RootShakePattern.Object.Rotation\" \"Object.CameraShakePattern.RootShakePattern.Object.Rotation.Roll\" "
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -2985,6 +2991,7 @@ LevelEditorPlaySettings=True
 /Game/Blueprints/BP_Axe.BP_Axe=0
 /Game/Animations/AS_Character_Idle_Unarmed_LookUp.AS_Character_Idle_Unarmed_LookUp=0
 /Game/Animations/AS_Character_Idle_Unarmed_LookDown.AS_Character_Idle_Unarmed_LookDown=0
+/Game/Blueprints/BP_CameraShake.BP_CameraShake=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
